# nekidaem_assessment

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
apps/blogs/: admin.py  apps.py  constants.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/blogs/migrations/: 0001_initial.py
apps/fake_db_data/: apps.py  factories.py
apps/fake_db_data/management/commands/: fill_database.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py  0002_seenposts_seenposts_unique_seen_post_entry.py
config/: settings.py  test_settings.py  urls.py
nginx/: default.conf
tests/: conftest.py  test_01_posts.py  test_02_users.py  test_03_blogs.py  test_04_feed.py
